--- a/Voucher Magic/Voucher Magic.csproj
+++ b/Voucher Magic/Voucher Magic.csproj
@@ -111,6 +111,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
+    <Content Include="Error.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="FindClient.aspx" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -170,6 +171,13 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Error.aspx.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error.aspx.designer.cs">
+      <DependentUpon>Error.aspx</DependentUpon>
     </Compile>
     <Compile Include="FindClient.aspx.cs">
       <DependentUpon>FindClient.aspx</DependentUpon>
